# smoltalk

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/asr/: config.yaml
configs/asr/callbacks/: asr_default.yaml
configs/asr/data/: common_voice.yaml  librispeech_100h.yaml  librispeech_dev.yaml
configs/asr/logger/: none.yaml  tensorboard.yaml  wandb.yaml
configs/asr/model/: conformer_tiny.yaml
configs/asr/trainer/: cpu.yaml  gpu.yaml  mps.yaml
configs/example/: config.yaml
configs/example/callbacks/: default.yaml
configs/example/data/: dummy.yaml  modular.yaml
configs/example/logger/: wandb.yaml
configs/example/model/: causal_lm.yaml  simple.yaml
configs/example/trainer/: ddp.yaml  mps.yaml
configs/logger/: none.yaml  tensorboard.yaml
configs/optim/: adamw.yaml
configs/trainer/: cpu.yaml  gpu_1.yaml
docker/: Dockerfile  entrypoint.sh
scripts/: setup_vm.sh
scripts/asr/: download_librispeech.sh  smoke_asr.sh  train_supervised_gpu.sh  train_supervised_mps.sh
scripts/example/: smoke_local.sh  train_ddp.sh  train_gpu.sh
src/asr/: __init__.py
src/asr/audio/: __init__.py  features.py
src/asr/data/: __init__.py  collate.py  common_voice.py  librispeech.py  lit_data.py  vocab.py
src/asr/decoding/: __init__.py  greedy.py
src/asr/evaluation/: __init__.py  metrics.py
src/asr/losses/: __init__.py  contrastive.py  ctc.py
src/asr/models/: __init__.py  conformer.py  conv_subsampler.py  lit_asr.py
src/asr/streaming/: __init__.py  chunked.py
tests/: test_data_integrity.py
(+29 files in other folders)
